# lexer-lab

./: .dockerignore  .gitignore  Dockerfile.web  README.md  docker-compose.yaml  docker-compose.yml  index.html  package-lock.json  package.json  student-template.hs  tsconfig.app.json  vite.config.ts
haskell-exec/: .dockerignore  ClientInfo.hs  Config.hs  Dockerfile  Email.hs  HttpError.hs  Judge.hs  Persistence.hs  RateLimit.hs  Server.hs  server.cabal
nginx/: default.conf
scripts/: fuzz-editor-locks.ts
src/: App.module.css  App.tsx  main.tsx
src/components/: Editor.module.css  Editor.tsx  ErrorPanel.module.css  ErrorPanel.tsx  FixtureChecklist.module.css  FixtureChecklist.tsx  IdentityModal.module.css  IdentityModal.test.tsx  IdentityModal.tsx  InputField.module.css
src/components/editor/: completions.ts  keymaps.ts  language.ts  localChecks.ts  theme.ts
src/hooks/: useAdaptiveDebounce.ts
src/lexer-lab/: editorLocks.ts  editorLocksCore.test.ts  editorLocksCore.ts  email.test.ts  email.ts  judgeFixtures.ts  payloads.ts  submitApi.test.ts  submitApi.ts  template-shared.ts  template.ts  types.ts
src/state/: store.test.ts  store.ts
src/styles/: globals.css
src/test/: setup.ts
